prevent over-writing another player's move

--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ button {
 }
 
 .cell {
+  font-size: 25px;
+  text-align: center;  
   border:1px solid blueviolet;
   width: 30px;
   height: 30px;
